<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyudong.agent_client.Login.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/background_light"
        android:elevation="5.7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/signUp_toolbar"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/signUpToolbar"
        android:gravity="center_vertical|center_horizontal|center">

        <TextView
            android:id="@+id/signupIdTxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:text="@string/username_hint"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/signupIdEtxt"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_below="@+id/signupIdTxv"
            android:layout_marginTop="7dp"
            android:background="@drawable/signup_custom_edittext"
            android:hint="@string/signUp_username"
            android:maxLength="13"
            android:inputType="textPersonName"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signupPwdTxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupIdEtxt"
            android:layout_marginTop="25dp"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:text="@string/password_hint"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/signupPwdEtxt"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_below="@+id/signupPwdTxv"
            android:layout_marginTop="7dp"
            android:background="@drawable/signup_custom_edittext"
            android:hint="@string/signUp_pwd"
            android:maxLength="15"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signupPhoneTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupPwdEtxt"
            android:layout_marginTop="25dp"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:text="@string/signUp_phoneTxv"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/signupPhoneEtxt"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_below="@+id/signupPhoneTxt"
            android:layout_marginTop="7dp"
            android:background="@drawable/signup_custom_edittext"
            android:hint="@string/signUp_phone"
            android:maxLength="13"
            android:inputType="phone"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/signupAddrTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupPhoneEtxt"
            android:layout_marginTop="25dp"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:text="@string/signUp_addrTxv"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/signupAddrEtxt"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_below="@+id/signupAddrTxt"
            android:layout_marginTop="7dp"
            android:background="@drawable/signup_custom_edittext"
            android:hint="@string/signUp_addr"
            android:maxLength="25"
            android:inputType="textPostalAddress"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/signupAddrEtxt"
            android:layout_below="@+id/signupAddrEtxt"
            android:layout_marginTop="30dp"
            android:background="@drawable/signup_custom_edittext"
            android:text="@string/signUp_toolbar" />
    </RelativeLayout>

</RelativeLayout>
