<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kyudong.agent_client.WriteBoard.BoardWrite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/writeBoardTitleTxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_title" />

        <EditText
            android:id="@+id/writeboard_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_border"
            android:cursorVisible="true"
            android:hint="@string/write_title"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:paddingBottom="1dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:paddingTop="1dp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/selectRegion_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_weight="16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/writeBoardContentTxv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_content" />

        <EditText
            android:id="@+id/writeboard_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_border"
            android:cursorVisible="true"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/content_hint"
            android:inputType="textMultiLine|textNoSuggestions"
            android:padding="15dp" />
    </LinearLayout>

    <Button
        android:id="@+id/writeBoardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="0"
        android:background="@drawable/login_btn"
        android:text="@string/write_button" />

</LinearLayout>
