<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kyudong.agent_client.LoginMain">

    <android.support.v7.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/background_light"
        android:elevation="5.7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_loginTxv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:text="@string/login_toolbar"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/loginsubLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/login_accountIV"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:contentDescription="@string/contentDescription"
                            app:srcCompat="@drawable/login_account_xxhdpi" />

                        <EditText
                            android:id="@+id/login_account_Etxt"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:background="@drawable/signup_custom_edittext"
                            android:hint="@string/username_hint"
                            android:inputType="textPersonName"
                            android:maxLength="13"
                            android:paddingEnd="20dp"
                            android:paddingStart="10dp"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/login_passwordIV"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:contentDescription="@string/contentDescription"
                            app:srcCompat="@drawable/ic_lock_outline_black_48dp" />

                        <EditText
                            android:id="@+id/login_password_Etxt"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:background="@drawable/signup_custom_edittext"
                            android:hint="@string/password_hint"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:paddingEnd="20dp"
                            android:paddingStart="10dp"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:background="@drawable/login_btn"
                    style="@style/btnStylelemon_chiffon"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/login_toolbar"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUplayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginLayout"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/RegisterTxv"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_marginStart="45dp"
                android:gravity="center_vertical"
                android:text="@string/signUp" />

            <TextView
                android:id="@+id/FindIdPwdTxv"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:text="@string/findId" />

            <CheckBox
                android:id="@+id/autoLoginCheckBox"
                android:layout_width="27.7dp"
                android:layout_height="24dp"
                android:layout_marginStart="40dp"
                android:button="@drawable/custom_checkbox"
                android:checked="false" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/authLogin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUplayout"
            android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>
