<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/CommentToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/background_light"
        android:elevation="5.7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_commentTxv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:text="@string/commentTxv"
                android:textColor="#7e7e7e"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/commentRvLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CommentToolbar"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/commentRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/commentRvLL"
        android:layout_weight="5"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/writeComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/registerCommentBtn"
            android:ems="10"
            android:hint="@string/commentEdtxtHint"
            android:inputType="none"
            android:textSize="13sp" />

        <Button
            android:id="@+id/registerCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="#f9f9f9"
            android:text="@string/commentRegisterBtn" />
    </RelativeLayout>

</LinearLayout>